[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A Python package for generating and solving mazes"
readme = "PACKAGE_README.md"
requires-python = ">=3.10"

authors = [
    {name = "rhssayn"},
    {name = "mlakhlil"}
]

[tool.setuptools.packages.find]
where = ["."]
